--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <img src="csc106_banner.jpg"> 
 
-        <h1> Hello world! </h1>
+        <h1> Hello World! </h1>
         
     </body>
 </html>
