--- a/javascripts.html
+++ b/javascripts.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Winno's Java Page</title>
+    </head>
+    <body>
 
+        <img src="csc106_banner.jpg"> 
+
+        <h1> Javascript </h1>
+      
+      Back to <a href="index.html"> Home Page </a>
+        
+    </body>
+</html>
