--- a/javascripts.html
+++ b/javascripts.html
@@ -8,7 +8,7 @@
 
         <img src="csc106_banner.jpg"> 
 
-        <h1> Javascript </h1>
+        <h1>My Javascript </h1>
       
       Back to <a href="index.html"> Home Page </a>
         
