--- a/index.html
+++ b/index.html
@@ -2,13 +2,22 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>New Webpage</title>
+        <title>index page</title>
     </head>
     <body>
 
         <img src="csc106_banner.jpg"> 
 
         <h1> Hello World! </h1>
-        
+        <table>
+            <thead>
+                <tr>
+                    <th>Home</th>
+                    <th>Javascript</th>
+                    <th>Apps>/th>
+                    <th>About me</th>
+                </tr>
+            </thead>
+            <tbody>
     </body>
 </html>
