--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <tr>
                     <th>Home</th>
                     <th>Javascript</th>
-                    <th>Apps>/th>
+                    <th>Apps</th>
                     <th>About me</th>
                 </tr>
             </thead>
