--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <table>
             <thead>
                 <tr>
-                    <th></th>
+                    <th><img src="home.png"></th>
                     <th>Javascript</th>
                     <th>Apps</th>
                     <th>About me</th>
