--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <thead>
                 <tr>
                     <th>Home<img src="home.png"></th>
-                    <th>Javascript</th>
-                    <th>Apps</th>
-                    <th>About me</th>
+                    <th>Javascript<img src="javascripts.png"></th>
+                    <th>Apps<img src="apps.png"></th>
+                    <th>About me<img src="about.png"></th>
                 </tr>
             </thead>
             <tbody>
