--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <table>
             <thead>
                 <tr>
-                    <th>Home<img src="home.png"></th>
-                    <th>Javascript<img src="javascripts.png"></th>
-                    <th>Apps<img src="apps.png"></th>
-                    <th>About me<img src="about.png"></th>
+                    <th><img src="home.png"></th>
+                    <th><img src="javascripts.png"></th>
+                    <th><img src="apps.png"></th>
+                    <th><img src="about.png"></th>
                 </tr>
             </thead>
             <tbody>
