--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <table>
             <thead>
                 <tr>
-                    <th><img src="home.png"></th>
+                    <th><a href="index.html"><img src="home.png"></a></th>
                     <th><img src="javascripts.png"></th>
                     <th><img src="apps.png"></th>
                     <th><img src="about.png"></th>
