--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <thead>
                 <tr>
                     <th><a href="index.html"><img src="home.png"></a></th>
-                    <th><img src="javascripts.png"></th>
-                    <th><img src="apps.png"></th>
-                    <th><img src="about.png"></th>
+                    <th><a href="javascripts.html"><img src="javascripts.png"></a></th>
+                    <th><a href="apps.html"><img src="apps.png"></a></th>
+                    <th><a href="about.html"><img src="about.png"></a></th>
                 </tr>
             </thead>
         <tbody>
