--- a/javascripts.html
+++ b/javascripts.html
@@ -19,7 +19,7 @@
                     <th><a href="about.html"><img src="about.png"></a></th>
                 </tr>
             </thead>
-        <tbody>
+        </table>
            
                 
     </body>
