--- a/javascripts.html
+++ b/javascripts.html
@@ -23,6 +23,6 @@
            
                 <p>This page will show my progress of Javascript thoughout the semester. I will create and post the thing 
                     I have made with Javascript and explain in greater detail. I will use Khan academy to help me with learning 
-                    javascript.
+                    javascript. <p>
     </body>
 </html>
