--- a/about.html
+++ b/about.html
@@ -1,1 +1,30 @@
 
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Winno's about Page</title>
+    </head>
+    <body>
+
+      
+        <img src="csc106_banner.jpg"> 
+
+        <h1>About me</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th><a href="index.html"><img src="home.png"></a></th>
+                    <th><a href="javascripts.html"><img src="javascripts.png"></a></th>
+                    <th><a href="apps.html"><img src="apps.png"></a></th>
+                    <th><a href="about.html"><img src="about.png"></a></th>
+                </tr>
+            </thead>
+        </table>
+           
+                <p>My name is Winno Philavanh. I am a sophmore at the University of Rhode Island and I am currently undecided.
+      I hope to find a passion while exploring classes of possible interest so I can be on track will graduating. I have not yet
+      found anything so far but going through CSC101, I really enjoyed it. I am taking CSC 106 which will be more about coding.
+      I want to see if programming is something I want to do for my future career.<p>
+    </body>
+</html>
