--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
                     <th><a href="about.html"><img src="about.png"></a></th>
                 </tr>
             </thead>
-        <tbody>
-            <p>This website is to show my progression in CSC 106. The website contains my use of javascript and the apps
+        </table>
+           
+        <p>This website is to show my progression in CSC 106. The website contains my use of javascript and the apps
                 that I will be creating using khan academy. There will also be a page about my personal information that I will be sharing to
                 give some insight about me. I will be using Github to create this website using coding language such as HTML and CSS. <p>
                 
