--- a/javascripts.html
+++ b/javascripts.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Winno's Java Page</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
 
