--- a/apps.html
+++ b/apps.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
        
         <title>Winno's apps Page</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
    
     <body>
