--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 
-        <img src="csc106_banner.jpg"> 
+        <img src="mybanner.jpg"> 
 
         <h1> Welcome To My Page!  </h1>
         
