--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <table>
             <thead>
                 <tr>
-                    <th><a href="index.html"><img src="home.png"></a></th>
-                    <th><a href="javascripts.html"><img src="javascripts.png"></a></th>
-                    <th><a href="apps.html"><img src="apps.png"></a></th>
-                    <th><a href="about.html"><img src="about.png"></a></th>
+                    <th><a href="index.html"><img src="homebutton.png"></a></th>
+                    <th><a href="javascripts.html"><img src="javascriptsbutton.png"></a></th>
+                    <th><a href="apps.html"><img src="appsbutton.png"></a></th>
+                    <th><a href="about.html"><img src="aboutmebutton.png"></a></th>
                 </tr>
             </thead>
         </table>
