--- a/javascripts.html
+++ b/javascripts.html
@@ -9,7 +9,7 @@
     <body>
 
       
-        <img src="csc106_banner.jpg"> 
+        <img src="mybanner.jpg"> 
 
         <h1>Javascripts </h1>
         <table>
