--- a/apps.html
+++ b/apps.html
@@ -9,7 +9,7 @@
     </head>
    
     <body>
-        <img src="csc106_banner.jpg"> 
+        <img src="mybanner.jpg"> 
 
         <h1>Apps</h1>
       
