--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <body>
 
       
-        <img src="csc106_banner.jpg"> 
+        <img src="mybanner.jpg"> 
 
         <h1>About me</h1>
         <table>
