--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     </head>
     <body>
 
-      
+      <div id="wholesome">
         <img src="mybanner.jpg"> 
 
         <h1>About me</h1>
@@ -27,5 +27,6 @@
       I hope to find a passion while exploring classes of possible interest so I can be on track will graduating. I have not yet
       found anything so far but going through CSC101, I really enjoyed it. I am taking CSC 106 which will be more about coding.
       I want to see if programming is something I want to do for my future career.<p>
+        </div>
     </body>
 </html>
