--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <div id="wholesome">
+        <div class="wholesome">
         <img src="mybanner.jpg"> 
 
         <h1> Welcome To My Page!  </h1>
