--- a/javascripts.html
+++ b/javascripts.html
@@ -8,7 +8,7 @@
     </head>
     <body>
 
-      
+      <div class="top">
         <img src="mybanner.jpg"> 
 
         <h1>Javascripts </h1>
@@ -26,5 +26,7 @@
                 <p>This page will show my progress of Javascript thoughout the semester. I will create and post the thing 
                     I have made with Javascript and explain in greater detail. I will use Khan academy to help me with learning 
                     javascript. <p>
+        </div>
     </body>
+        
 </html>
