--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
         <table>
             <thead>
                 <tr>
+                    <div class="buttons">
                     <th><a href="index.html"><img src="homebutton.png"></a></th>
                     <th><a href="javascripts.html"><img src="javasciptsbutton.png"></a></th>
                     <th><a href="apps.html"><img src="appsbutton.png"></a></th>
                     <th><a href="about.html"><img src="aboutmebutton.png"></a></th>
+                    </div>
                 </tr>
             </thead>
         </table>
