--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <table>
             <thead>
                 <tr>
-                    <div class="buttons">
+                    <div id="buttons">
                     <th><a href="index.html"><img src="homebutton.png"></a></th>
                     <th><a href="javascripts.html"><img src="javasciptsbutton.png"></a></th>
                     <th><a href="apps.html"><img src="appsbutton.png"></a></th>
