--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
         <h1> Welcome To My Page!  </h1>
        <div id="buttons"> 
-        <table>
+        <table class="center">
             <thead>
                 <tr>
-                    <div id="buttons">
+                  
                     <th><a href="index.html"><img src="homebutton.png"></a></th>
                     <th><a href="javascripts.html"><img src="javasciptsbutton.png"></a></th>
                     <th><a href="apps.html"><img src="appsbutton.png"></a></th>
@@ -23,7 +23,7 @@
                 </tr>
             </thead>
         </table>
-         </div>   
+        
         <p>My name is Winno Philavanh.This website is my portfolio of programs that I have written for the CSC106 Computing<br>
         Programming at the University of Rhode Island. I wrote this page itself using the HTML programming language. The Apps<br>
         link above will show the apps that I have created in this course. The Javascript link will show my use of the language. <p>
