--- a/javascripts.html
+++ b/javascripts.html
@@ -15,10 +15,10 @@
         <table>
             <thead>
                 <tr>
-                    <th><a href="index.html"><img src="homebutton.png"></a></th>
-                    <th><a href="javascripts.html"><img src="javasciptsbutton.png"></a></th>
-                    <th><a href="apps.html"><img src="appsbutton.png"></a></th>
-                    <th><a href="about.html"><img src="aboutmebutton.png"></a></th>
+                    <th id="button1"><a href="index.html"><img src="homebutton.png"></a></th>
+                    <th id="button2"><a href="javascripts.html"><img src="javasciptsbutton.png"></a></th>
+                    <th id="button3"><a href="apps.html"><img src="appsbutton.png"></a></th>
+                    <th id="button4><a href="about.html"><img src="aboutmebutton.png"></a></th>
                 </tr>
             </thead>
         </table>
