--- a/apps.html
+++ b/apps.html
@@ -9,6 +9,7 @@
     </head>
    
     <body>
+        <div class="top">
         <img src="mybanner.jpg"> 
 
         <h1>Apps</h1>
@@ -28,6 +29,6 @@
         <p>This page will show my progress of apps that I will create thoughout the semester. The apps will be created through Khan academy
                   because khan academy helps me practice and make small apps so I can understand the basics of HTML and CSS then 
                   using that basic knowledge to create an app with my own ideas.<p>
-                  
+        </div>  
     </body>
 </html>
