--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-
+<div class="top">
   
         <img src="mybanner.jpg"> 
 
@@ -27,6 +27,7 @@
       I hope to find a passion while exploring classes of possible interest so I can be on track will graduating. I have not yet
       found anything so far but going through CSC101, I really enjoyed it. I am taking CSC 106 which will be more about coding.
       I want to see if programming is something I want to do for my future career.<p>
+        </div>
 
     </body>
 </html>
