--- a/apps.html
+++ b/apps.html
@@ -26,9 +26,9 @@
         </table>
            
                 
-        <p>This page will show my progress of apps that I will create thoughout the semester. The apps will be created through Khan academy
-                  because khan academy helps me practice and make small apps so I can understand the basics of HTML and CSS then 
-                  using that basic knowledge to create an app with my own ideas.<p>
+        <p>This page will show my progress of apps that I will create thoughout the semester. The apps will be <br>
+            created through Khan academy because khan academy helps me practice and make small apps so I can <br>
+            understand the basics of HTML and CSS then using that basic knowledge to create an app with my own ideas.<p>
         </div>  
     </body>
 </html>
