--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@
             </thead>
         </table>
            
-                <p>My name is Winno Philavanh. I am a sophmore at the University of Rhode Island and I am currently undecided.
-      I hope to find a passion while exploring classes of possible interest so I can be on track will graduating. I have not yet
-      found anything so far but going through CSC101, I really enjoyed it. I am taking CSC 106 which will be more about coding.
+                <p>My name is Winno Philavanh. I am a sophmore at the University of Rhode Island and I am currently undecided.<br>
+      I hope to find a passion while exploring classes of possible interest so I can be on track will graduating. I have not yet<br>
+      found anything so far but going through CSC101, I really enjoyed it. I am taking CSC 106 which will be more about coding.<br>
       I want to see if programming is something I want to do for my future career.<p>
         </div>
 
