--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <thead>
                 <tr>
           
-                    <th><a href="index.html"><img src="homebutton.png"></a></th>
-                    <th><a href="javascripts.html"><img src="javasciptsbutton.png"></a></th>
-                    <th><a href="apps.html"><img src="appsbutton.png"></a></th>
-                    <th><a href="about.html"><img src="aboutmebutton.png"></a></th>
+                    <th class="button"><a href="index.html"><img src="homebutton.png"></a></th>
+                    <th class="button"><a href="javascripts.html"><img src="javasciptsbutton.png"></a></th>
+                    <th class="button"><a href="apps.html"><img src="appsbutton.png"></a></th>
+                    <th class="button"><a href="about.html"><img src="aboutmebutton.png"></a></th>
                     
                 </tr>
             </thead>
