--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <img src="mybanner.jpg"> 
 
         <h1> Welcome To My Page!  </h1>
-        <div class="buttons">
-        <table>
+        <div>
+        <table align="center">
             <thead>
                 <tr>
           
