--- a/apps.html
+++ b/apps.html
@@ -14,7 +14,7 @@
 
         <h1>Apps</h1>
       
-        <table>
+        <table align="center">
             <thead>
                 <tr>
                     <th><a href="index.html"><img src="homebutton.png"></a></th>
