--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <img src="mybanner.jpg"> 
 
         <h1>About me</h1>
-        <table>
+        <table align="center">
             <thead>
                 <tr>
                     <th><a href="index.html"><img src="homebutton.png"></a></th>
