--- a/javascripts.html
+++ b/javascripts.html
@@ -26,6 +26,8 @@
                 <p>This page will show my progress of Javascript thoughout the semester. I will create and post the thing<br>
                     I have made with Javascript and explain in greater detail. I will use Khan academy to help me with<br>
                    learning javascript. <p>
+          
+          <h2><a href="https://www.khanacademy.org/computer-programming/winno-bitmoji/6638654385045504">Winno-Bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/winno-bitmoji/6638654385045504/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
         </div>
     </body>
         
