--- a/javascripts.html
+++ b/javascripts.html
@@ -31,6 +31,8 @@
          <h2><a href="https://www.khanacademy.org/computer-programming/philavanh_bitmoji/6638654385045504">Philavanh_Bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/philavanh_bitmoji/6638654385045504/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
          <h2><a href="https://www.khanacademy.org/computer-programming/philavanh_dancingbitmoji/5589418900996096">Philavanh_dancingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/philavanh_dancingbitmoji/5589418900996096/embed.js?editor=no&buttons=no&author=no&embed=yes"></script> 
          <h2><a href="https://www.khanacademy.org/computer-programming/philavanh_raceingbitmoji/6674814444519424">Philavanh_raceingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/philavanh_raceingbitmoji/6674814444519424/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+         
+          img src=dancing.jpg"> 
         </div>
     </body>
         
