--- a/javascripts.html
+++ b/javascripts.html
@@ -32,7 +32,7 @@
          <h2><a href="https://www.khanacademy.org/computer-programming/philavanh_dancingbitmoji/5589418900996096">Philavanh_dancingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/philavanh_dancingbitmoji/5589418900996096/embed.js?editor=no&buttons=no&author=no&embed=yes"></script> 
          <h2><a href="https://www.khanacademy.org/computer-programming/philavanh_raceingbitmoji/6674814444519424">Philavanh_raceingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/philavanh_raceingbitmoji/6674814444519424/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
          
-          <a href ="https://www.khanacademy.org/computer-programming/philavanh_dancingbitmojifun/5265618393120768"</a><img src=dancing.jpg">
+          <a href ="https://www.khanacademy.org/computer-programming/philavanh_dancingbitmojifun/5265618393120768"><img src=dancing.jpg"></a>
         </div>
     </body>
         
