--- a/javascripts.html
+++ b/javascripts.html
@@ -32,9 +32,9 @@
          <h2><a href="https://www.khanacademy.org/computer-programming/philavanh_dancingbitmoji/5589418900996096">Philavanh_dancingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/philavanh_dancingbitmoji/5589418900996096/embed.js?editor=no&buttons=no&author=no&embed=yes"></script> 
          <h2><a href="https://www.khanacademy.org/computer-programming/philavanh_raceingbitmoji/6674814444519424">Philavanh_raceingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/philavanh_raceingbitmoji/6674814444519424/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
          
-          <h2>Dancing bitmoji with fucntions<a href ="https://www.khanacademy.org/computer-programming/philavanh_dancingbitmojifun/5265618393120768"><img src="dancing.jpg" alt="dancingimage"></a>
-          <h2>Resizing bitmoji<a href ="https://www.khanacademy.org/computer-programming/philavanh_resizingbitmoji/6596201792684032"><img src="resize.jpg" alt="resizeimage"></a> 
-          <h2>Racing bitmoji with functions<a href ="https://www.khanacademy.org/computer-programming/philavanh_raceingbitmojifun/4546819058581504"><img src="race.jpg"></a>    
+          <h2>Dancing bitmoji with fucntions<br><a href ="https://www.khanacademy.org/computer-programming/philavanh_dancingbitmojifun/5265618393120768"><img src="dancing.jpg" alt="dancingimage"></a>
+          <h2>Resizing bitmoji<br><a href ="https://www.khanacademy.org/computer-programming/philavanh_resizingbitmoji/6596201792684032"><img src="resize.jpg" alt="resizeimage"></a> 
+          <h2>Racing bitmoji with functions<br><a href ="https://www.khanacademy.org/computer-programming/philavanh_raceingbitmojifun/4546819058581504"><img src="race.jpg"></a>    
               
         </div>
     </body>
