--- a/javascripts.html
+++ b/javascripts.html
@@ -30,7 +30,7 @@
           
          <h2><a href="https://www.khanacademy.org/computer-programming/philavanh_bitmoji/6638654385045504">Philavanh_Bitmoji</a></h2><img src="resize.jpg">
          <h2><a href="https://www.khanacademy.org/computer-programming/philavanh_dancingbitmoji/5589418900996096">Philavanh_dancingBitmoji</a></h2>img src="dancing.jpg"> 
-         <h2><a href="https://www.khanacademy.org/computer-programming/philavanh_raceingbitmoji/6674814444519424">Philavanh_raceingBitmoji</a></h2><script src="race.jpg">
+         <h2><a href="https://www.khanacademy.org/computer-programming/philavanh_raceingbitmoji/6674814444519424">Philavanh_raceingBitmoji</a></h2><img src="race.jpg">
          
           <h2>Dancing bitmoji with fucntions<br><a href ="https://www.khanacademy.org/computer-programming/philavanh_dancingbitmojifun/5265618393120768"><h2><img src="dancing.jpg" alt="dancingimage"></a>
           <h2>Resizing bitmoji<br><a href ="https://www.khanacademy.org/computer-programming/philavanh_resizingbitmoji/6596201792684032"><img src="resize.jpg" alt="resizeimage"></a> 
