--- a/javascripts.html
+++ b/javascripts.html
@@ -35,7 +35,7 @@
           <h2>Dancing bitmoji with fucntions<br><a href ="https://www.khanacademy.org/computer-programming/philavanh_dancingbitmojifun/5265618393120768"><h2><img src="dancing.jpg" alt="dancingimage"></a>
           <h2>Resizing bitmoji<br><a href ="https://www.khanacademy.org/computer-programming/philavanh_resizingbitmoji/6596201792684032"><img src="resize.jpg" alt="resizeimage"></a> 
           <h2>Racing bitmoji with functions<br><a href ="https://www.khanacademy.org/computer-programming/philavanh_raceingbitmojifun/4546819058581504"><img src="race.jpg"></a>    
-              
+          <h2>Follow bitmoji <br><a href="https://www.khanacademy.org/computer-programming/philavanh_follow/5489045413314560"><img src="outofbounds.jpg"></a>   
         </div>
     </body>
         
