--- a/javascripts.html
+++ b/javascripts.html
@@ -36,6 +36,7 @@
           <h2>Resizing bitmoji<br><a href ="https://www.khanacademy.org/computer-programming/philavanh_resizingbitmoji/6596201792684032"><img src="resize.jpg" alt="resizeimage"></a> 
           <h2>Racing bitmoji with functions<br><a href ="https://www.khanacademy.org/computer-programming/philavanh_raceingbitmojifun/4546819058581504"><img src="race.jpg"></a>    
           <h2>Follow bitmoji <br><a href="https://www.khanacademy.org/computer-programming/philavanh_follow/5489045413314560"><img src="outofbounds.jpg"></a>   
+          <h2>Decision bitmoji <br><a href="https://www.khanacademy.org/computer-programming/philavanh_decision/5612458882646016"><img src="decision.jpg"></a>
         </div>
     </body>
         
