--- a/javascripts.html
+++ b/javascripts.html
@@ -37,6 +37,7 @@
           <h2>Racing bitmoji with functions<br><a href ="https://www.khanacademy.org/computer-programming/philavanh_raceingbitmojifun/4546819058581504"><img src="race.jpg"></a>    
           <h2>Follow bitmoji <br><a href="https://www.khanacademy.org/computer-programming/philavanh_follow/5489045413314560"><img src="outofbounds.jpg"></a>   
           <h2>Decision bitmoji <br><a href="https://www.khanacademy.org/computer-programming/philavanh_decision/5612458882646016"><img src="decision.jpg"></a>
+          <h2>Multiplication tabl <br><a href="https://www.khanacademy.org/computer-programming/philavanh_multiplcation/5493384963964928"><img src="Screen Shot 2020-03-04 at 10.49.57 AM.png"></a>
         </div>
     </body>
         
