--- a/javascripts.html
+++ b/javascripts.html
@@ -39,6 +39,8 @@
           <h2>Decision bitmoji <br><a href="https://www.khanacademy.org/computer-programming/philavanh_decision/5612458882646016"><img src="decision.jpg"></a>
           <h2>Multiplication table <br><a href="https://www.khanacademy.org/computer-programming/philavanh_multiplcation/5493384963964928"><img src="Screen Shot 2020-03-04 at 10.49.57 AM.png"></a>
           <h2>Bitmojiline <br><a href="https://www.khanacademy.org/computer-programming/philavanh_bitmoji_line/5801002290921472"><img src="Screen Shot 2020-03-04 at 11.27.36 AM.png"></a>    
+          <h2>Parade <br><a href="https://www.khanacademy.org/computer-programming/philavanh_parade/5863118145339392"><img src="parade.jpg"></a>
+          <h2>Reverse <br><a href="https://www.khanacademy.org/computer-programming/philavanh_rerversearray/5244025587384320"><img src="reverse.jpg"></a>
         </div>
     </body>
         
