--- a/javascripts.html
+++ b/javascripts.html
@@ -42,7 +42,7 @@
           <h2>Parade <br><a href="https://www.khanacademy.org/computer-programming/philavanh_parade/5863118145339392"><img src="parade.jpg"></a>
           <h2>Reverse <br><a href="https://www.khanacademy.org/computer-programming/philavanh_rerversearray/5244025587384320"><img src="reverse.jpg"></a>
           <h2>Frogger <br><a href="https://www.khanacademy.org/computer-programming/frogger/5561528890834944"><img src="frogger.jpg"></a>
-          <h2>Object lines <br> a href="https://www.khanacademy.org/computer-programming/philavanh_linewithobjects/6414402777268224"><img src="object.jpg"></a>
+          <h2>Object lines <br><a href="https://www.khanacademy.org/computer-programming/philavanh_linewithobjects/6414402777268224"><img src="object.jpg"></a>
         </div>
     </body>
         
