--- a/final.html
+++ b/final.html
@@ -8,8 +8,18 @@
     <body>
         <div class="top">
         <img src="mybanner.jpg"> 
+            <h1> Final Project  </h1>
+            <table align="center">
+            <thead>
+                <tr>
+                    <th><a href="index.html"><img src="homebutton.png"></a></th>
+                    <th><a href="javascripts.html"><img src="javasciptsbutton.png"></a></th>
+                    <th><a href="apps.html"><img src="appsbutton.png"></a></th>
+                    <th><a href="about.html"><img src="aboutmebutton.png"></a></th>
+                </tr>
+            </thead>
+        </table>
 
-        <h1> Final Project  </h1>
          
           <p>Introducing to you my final project for CSC106, it is a strafing game. You will use the<br>
             the direction keys, left and right arrow keys, to move your player away to avoid falling rocks<br>
