--- a/apps.html
+++ b/apps.html
@@ -21,6 +21,7 @@
                     <th><a href="javascripts.html"><img src="javasciptsbutton.png"></a></th>
                     <th><a href="apps.html"><img src="appsbutton.png"></a></th>
                     <th><a href="about.html"><img src="aboutmebutton.png"></a></th>
+                     <th><a href="final.html"><img src="Final.png"></a></th>
                 </tr>
             </thead>
         </table>
